--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
       crossorigin="anonymous"
     ></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WDQ5T88M03"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-WDQ5T88M03");
+    </script>
     <script src="js/script.js" defer></script>
     <script src="js/rotate.js" defer></script>
     <!---->
@@ -47,7 +61,7 @@
         <li><a href="#brownies">Brownies</a></li>
         <li><a href="#brigadeiros">Brigadeiros</a></li>
         <li><a href="#capcukes">Capcukes</a></li>
-        <li><a href="#doceFinos">Doces finos</a></li>
+        <li><a href="#docesFinos">Doces finos</a></li>
         <li><a href="#tortas">Tortas e mini tortas</a></li>
         <li><a href="#trufas">Trufas</a></li>
         <li><a href="#pudins">Pudins</a></li>
@@ -60,7 +74,9 @@
       <div class="containerHero">
         <img src="img/svgs/cake shop-cuate.svg" alt="Cake shop" />
         <h2>Atenção</h2>
-        <p>Consultar os sabores e recheios <br>disponiveis no momento do pedido</p>
+        <p>
+          Consultar os sabores e recheios <br />disponiveis no momento do pedido
+        </p>
       </div>
     </section>
     <!---->
@@ -124,7 +140,9 @@
               <h3>Brownie (Individual)</h3>
               <article>
                 <p>
-                  Perfeito para um lanche especial ou sobremesa após uma refeição, nosso brownie é uma escolha deliciosa para adoçar momentos únicos e criar memórias doces
+                  Perfeito para um lanche especial ou sobremesa após uma
+                  refeição, nosso brownie é uma escolha deliciosa para adoçar
+                  momentos únicos e criar memórias doces
                 </p>
 
                 <p class="valor">A partir de R$8,00</p>
@@ -134,7 +152,10 @@
               </article>
             </div>
             <div class="imgProduto">
-              <img src="img/pngs-jpeg/brownie-p.jpg" alt="foto brownie pequena" />
+              <img
+                src="img/pngs-jpeg/brownie-p.jpg"
+                alt="foto brownie pequena"
+              />
             </div>
           </div>
           <div class="container">
@@ -142,7 +163,10 @@
               <h3>Brownie Grande</h3>
               <article>
                 <p>
-                  Esse brownie é ideal para ser compartilhado com quem você ama. Perfeito para festas, reuniões ou simplesmente para alegrar o dia dos que estão ao seu redor com uma fatia desse doce encantador.
+                  Esse brownie é ideal para ser compartilhado com quem você ama.
+                  Perfeito para festas, reuniões ou simplesmente para alegrar o
+                  dia dos que estão ao seu redor com uma fatia desse doce
+                  encantador.
                 </p>
 
                 <p class="valor">A partir de R$45,00</p>
@@ -153,7 +177,10 @@
               </article>
             </div>
             <div class="imgProduto">
-              <img src="img/pngs-jpeg/brownie-g.jpg" alt="foto brownie grande" />
+              <img
+                src="img/pngs-jpeg/brownie-g.jpg"
+                alt="foto brownie grande"
+              />
             </div>
           </div>
         </details>
@@ -169,7 +196,9 @@
               <h3>brigadeiros tradicionais (Cento)</h3>
               <article>
                 <p>
-                  Cada brigadeiro é uma deliciosa explosão de sabor, com  textura cremosa que derrete na boca. É uma experiência inesquecível que traz ainda mais alegria à sua festa.
+                  Cada brigadeiro é uma deliciosa explosão de sabor, com textura
+                  cremosa que derrete na boca. É uma experiência inesquecível
+                  que traz ainda mais alegria à sua festa.
                 </p>
 
                 <p class="valor">R$150,00 (Unidade 1,50)</p>
@@ -179,7 +208,10 @@
               </article>
             </div>
             <div class="imgProduto">
-              <img src="img/pngs-jpeg/brigadeiro-tradicional.jpg" alt="foto de brigafeiro tradicional" />
+              <img
+                src="img/pngs-jpeg/brigadeiro-tradicional.jpg"
+                alt="foto de brigafeiro tradicional"
+              />
             </div>
           </div>
           <div class="container">
@@ -187,7 +219,9 @@
               <h3>Brigadeiros gourmet (Cento)</h3>
               <article>
                 <p>
-                  Cada brigadeiro é uma deliciosa explosão de sabor, com  textura cremosa que derrete na boca. É uma experiência inesquecível que traz ainda mais alegria à sua festa.
+                  Cada brigadeiro é uma deliciosa explosão de sabor, com textura
+                  cremosa que derrete na boca. É uma experiência inesquecível
+                  que traz ainda mais alegria à sua festa.
                 </p>
                 <p class="valor">R$180,00 (Unidade 1,80)</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
@@ -196,7 +230,10 @@
               </article>
             </div>
             <div class="imgProduto">
-              <img src="img/pngs-jpeg/brigadeiro-gourmet.jpeg" alt="foto de brigadeiro gourmet" />
+              <img
+                src="img/pngs-jpeg/brigadeiro-gourmet.jpeg"
+                alt="foto de brigadeiro gourmet"
+              />
             </div>
           </div>
         </details>
@@ -212,7 +249,9 @@
               <h3>Cupcake</h3>
               <article>
                 <p>
-                  Experimente nossos cupcakes artesanais feitos com paixão em cada detalhe. Massa amanteigada e sabores variados tornam cada mordida única. 
+                  Experimente nossos cupcakes artesanais feitos com paixão em
+                  cada detalhe. Massa amanteigada e sabores variados tornam cada
+                  mordida única.
                 </p>
                 <p class="valor">A partir de R$6,00 (Unidade)</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
@@ -226,7 +265,7 @@
           </div>
         </details>
       </section>
-      <section id="DocesFinos">
+      <section id="docesFinos">
         <details open>
           <summary id="summaryDoces">
             <h2>Doces finos</h2>
@@ -237,7 +276,9 @@
               <h3>Coquelitas</h3>
               <article>
                 <p>
-                  Coquelitas é um doce fino em formato de coco, Com uma casquinha chocolate nobre por fora e um delicioso recheio da sua escolha.
+                  Coquelitas é um doce fino em formato de coco, Com uma
+                  casquinha chocolate nobre por fora e um delicioso recheio da
+                  sua escolha.
                 </p>
                 <p class="valor">R$2,00 (Unidade)</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
@@ -254,7 +295,10 @@
               <h3>Copinho de chocolate</h3>
               <article>
                 <p>
-                  Apesar do tamanho compacto, nossos copinhos de chocolate oferecem uma explosão de sabores. Recheados com ganaches, mousses ou cremes delicados, cada mordida é uma experiência gourmet repleta de prazer.
+                  Apesar do tamanho compacto, nossos copinhos de chocolate
+                  oferecem uma explosão de sabores. Recheados com ganaches,
+                  mousses ou cremes delicados, cada mordida é uma experiência
+                  gourmet repleta de prazer.
                 </p>
                 <p class="valor">R$3,00 (Unidades)</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
@@ -263,7 +307,10 @@
               </article>
             </div>
             <div class="imgProduto">
-              <img src="img/pngs-jpeg/copinho.jpeg" alt="foto copinho de chocolate" />
+              <img
+                src="img/pngs-jpeg/copinho.jpeg"
+                alt="foto copinho de chocolate"
+              />
             </div>
           </div>
           <div class="container">
@@ -271,7 +318,8 @@
               <h3>Bombom tradicional</h3>
               <article>
                 <p>
-                  Nossos bombons são uma explosão de sabores surpreendentes. Com uma variedade de recheios da sua escolha.
+                  Nossos bombons são uma explosão de sabores surpreendentes. Com
+                  uma variedade de recheios da sua escolha.
                 </p>
                 <p class="valor">R$1,50 (Unidades)</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
@@ -280,7 +328,10 @@
               </article>
             </div>
             <div class="imgProduto">
-              <img src="img/pngs-jpeg/bombom-tradicional.jpeg" alt="foto bombom tradicional" />
+              <img
+                src="img/pngs-jpeg/bombom-tradicional.jpeg"
+                alt="foto bombom tradicional"
+              />
             </div>
           </div>
           <div class="container">
@@ -288,7 +339,8 @@
               <h3>Bombom de morango</h3>
               <article>
                 <p>
-                  Com uma Casquinha de chocolate nobre por fora e uma morango fresco dentro,Traz uma explosão de sabor.
+                  Com uma Casquinha de chocolate nobre por fora e uma morango
+                  fresco dentro,Traz uma explosão de sabor.
                 </p>
                 <p class="valor">R$3,00 (Unidade)</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
@@ -297,7 +349,10 @@
               </article>
             </div>
             <div class="imgProduto">
-              <img src="img/pngs-jpeg/bombom-morango.jpeg" alt="foto bobom morango" />
+              <img
+                src="img/pngs-jpeg/bombom-morango.jpeg"
+                alt="foto bobom morango"
+              />
             </div>
           </div>
         </details>
@@ -313,7 +368,8 @@
               <h3>Tortinha (Individual)</h3>
               <article>
                 <p>
-                  Deliciosa tortinha com massa crocante e bastante recheio da sua escolha.
+                  Deliciosa tortinha com massa crocante e bastante recheio da
+                  sua escolha.
                 </p>
                 <p class="valor">A partir de R$5,00</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
@@ -330,7 +386,9 @@
               <h3>Torta grande (1kg)</h3>
               <article>
                 <p>
-                  Deliciosa torta com massa crocante e bastante recheio da sua escolha e mais de 1kg para você compartilhar com todos que você ama.
+                  Deliciosa torta com massa crocante e bastante recheio da sua
+                  escolha e mais de 1kg para você compartilhar com todos que
+                  você ama.
                 </p>
                 <p class="valor">A partir de R$50,00</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
@@ -344,10 +402,10 @@
           </div>
         </details>
       </section>
-      <section id="trunfas">
+      <section id="trufas">
         <details open>
           <summary id="summaryTrunfas">
-            <h2>Trunfas</h2>
+            <h2>Trufas</h2>
             <i class="fa-solid fa-caret-down" id="caret-down-trunfas"></i>
           </summary>
           <div class="container">
@@ -355,7 +413,10 @@
               <h3>Trufas tradicionais</h3>
               <article>
                 <p>
-                  Experimente a trufa tradicional, o clássico irresistível do chocolate. Com um recheio suave e delicioso, cada trufa é uma pequena delícia que derrete na boca. A doçura perfeita para satisfazer seus desejos açucarados!
+                  Experimente a trufa tradicional, o clássico irresistível do
+                  chocolate. Com um recheio suave e delicioso, cada trufa é uma
+                  pequena delícia que derrete na boca. A doçura perfeita para
+                  satisfazer seus desejos açucarados!
                 </p>
                 <p class="valor">A partir de R$2,00(Unidade)</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
@@ -380,9 +441,12 @@
               <h3>Mini pudim (Individual)</h3>
               <article>
                 <p>
-                  Desfrute do nosso pudim de leite, uma sobremesa clássica e irresistível. Com sua textura cremosa e sabor reconfortante, cada colherada é uma experiência de puro prazer. Delicie-se com essa doçura que aquece o coração!
+                  Desfrute do nosso pudim de leite, uma sobremesa clássica e
+                  irresistível. Com sua textura cremosa e sabor reconfortante,
+                  cada colherada é uma experiência de puro prazer. Delicie-se
+                  com essa doçura que aquece o coração!
                 </p>
-                <p class="valor">R$8,00</p>
+                <p class="valor">R$5,00</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
                   >Fazer pedido <i class="fa-brands fa-whatsapp"></i
                 ></a>
@@ -397,7 +461,10 @@
               <h3>Pudim Grande (1kg)</h3>
               <article>
                 <p>
-                  Desfrute do nosso pudim de leite, uma sobremesa clássica e irresistível. Com sua textura cremosa e sabor reconfortante, cada colherada é uma experiência de puro prazer. Delicie-se com essa doçura que aquece o coração!
+                  Desfrute do nosso pudim de leite, uma sobremesa clássica e
+                  irresistível. Com sua textura cremosa e sabor reconfortante,
+                  cada colherada é uma experiência de puro prazer. Delicie-se
+                  com essa doçura que aquece o coração!
                 </p>
                 <p class="valor">R$50,00</p>
                 <a href="https://wa.me/5581986675883" target="_blank"
